식단 화면 1차 작업 및 db조회방법 수정