@@ -20,28 +20,26 @@ public class MealService {
     private final UserRepository userRepository;
 
     public MealListResDto getUserMealList(Integer year, Integer month) {
-        List<Meal> mealList = mealRepository.findMealsByUserIdAndYearAndMonth(7L, year, month);
-        return new MealListResDto(mealList.stream().map(Meal::toRes).toList());
+        List<Meal> meals = mealRepository.findMealsByUserIdAndYearAndMonth(7L, year, month);
+        Map<LocalDate, List<MealResDto>> mealList =  meals
+                .stream().map(Meal::toRes)
+                .collect(Collectors.groupingBy(MealResDto::getDate, TreeMap::new, Collectors.toList()));
+        return new MealListResDto(mealList);
     }
 
     public MealDayResDto getUserDayMealList(Integer year, Integer month) {
         List<MealDayCntResDto> mealList = mealRepository.findDayByUserIdAndYearAndMonth(7L, year, month);
-        System.out.println(mealList);
-        //Map<LocalDate, List<MealDayCntResDto>> mealsByDate = mealList.stream().collect(Collectors.groupingBy(MealDayCntResDto::getDate, TreeMap::new, Collectors.toList()));
-        //System.out.println(mealsByDate);
-        //List<Map.Entry<LocalDate, List<MealDayCntResDto>>> mealDayEntries = new ArrayList<>(mealsByDate.entrySet());
-        //System.out.println(mealDayEntries);
-        return new MealDayResDto(mealList);
+        return new MealDayResDto(mealList.stream().map(Meal::toDayCnt).toList());
     }
 
-    public MealListResDto getRecommandList() {
+    public MealRecomResDto getRecommandList() {
         List<Meal> recommandList = mealRepository.findByUserId(1L);
-        return new MealListResDto(recommandList.stream().map(Meal::toRecom).toList());
+        return new MealRecomResDto(recommandList.stream().map(Meal::toRecom).toList());
     }
 
-    public MealListResDto getFavoriteList(Long id) {
+    public MealRecomResDto getFavoriteList(Long id) {
         List<Meal> favoriteList = mealRepository.findByUserIdAndIsFavorite(id, true);
-        return new MealListResDto(favoriteList.stream().map(Meal::toRecom).toList());
+        return new MealRecomResDto(favoriteList.stream().map(Meal::toRecom).toList());
     }
 
     public Boolean insertMealList(List<Meal> meals) {
